# playwright-kiosk

./: .gitignore  README.md  chromium-kiosk.py  pyproject.toml
